# MyCFile

./: .gitignore  ReadMe.md
Common/: CMakeLists.txt  FunctionTest.c  PointerTest.c  dynamicPrime.c  hello.c  strTest.c  struct_test.c  test_io.c
Common/algorithm/data_struct/arraylist/: arraylist.c  arraylist.h
Common/algorithm/data_struct/double_queue/: double_queue.c
Common/algorithm/data_struct/hashmap/: hashmap.c
Common/algorithm/data_struct/quque/: queue.c
Common/algorithm/data_struct/stack/: stack.c  stack.h
Common/algorithm/data_struct/two_stack_queue/: tow_stack_queue.c
Common/algorithm/include/: README.md  arraylist.h  cat_dog_queue.h  double_queue.h  get_max_tree.h  hashmap.h  min_stack.h  queue.h  stack.h  tow_stack_queue.h
Common/algorithm/stack_and_queue/cat_dog_quque/: cat_dog_queue.c
Common/algorithm/stack_and_queue/get_max_tree/: get_max_tree.c
Common/algorithm/stack_and_queue/hanio_problem/: hanio_problem.c
Common/algorithm/stack_and_queue/max_matrix/: max_matrix.c
Common/algorithm/stack_and_queue/my_stack/: min_stack.c  min_stack.h
Common/algorithm/stack_and_queue/reverse_stack/: reverse_stack.c
Common/algorithm/stack_and_queue/sort_stack_by_stack/: sort_stack_by_stack.c
Common/algorithm/stack_and_queue/tow_stack_queue/: tow_stack_queue.c
Common/algorithm/stack_and_queue/window_max_num/: window_max_num.c
Common/data_struct/: README.md
Common/data_struct/arraylist/: arraylist.c  arraylist.h
Common/data_struct/stack/: stack.c  stack.h
otherfile/: gjb.c
otherfile/compilations/: ReadMe.md  exit.s  getMaxNum.s
